--- a/PPTT/Pages/PT/Finalizados.cshtml
+++ b/PPTT/Pages/PT/Finalizados.cshtml
@@ -8,7 +8,7 @@
 <body>
     <div class="header-index-pt">
         <a asp-page="./Index" class="btn-header-pt">Volver a Index de trabajos</a>
-        <div>
+        @{/*<div>              
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
             <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
             <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> <!-- Cargar idioma español -->
@@ -33,7 +33,7 @@
 
                 <button type="button" id="filtrar" class="filtrar">Filtrar</button>
             </form>
-        </div> <!-- FILTRAR POR FECHA -->
+        </div>*/} <!-- FILTRAR POR FECHA -->
         <button id="btnExportar" class="btnExportar">Exportar Excel</button>
     </div>
     <table class="table" id="tabla">
