--- a/PPTT/Pages/PT/FinalizadosAdmin.cshtml
+++ b/PPTT/Pages/PT/FinalizadosAdmin.cshtml
@@ -8,7 +8,7 @@
 <body>
     <div class="header-index-pt">        
         <a asp-page="./IndexAdmin" class="btn-header-pt">Volver a Index de trabajos</a>
-        <div>
+        @{/*<div>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
             <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
             <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> <!-- Cargar idioma español -->
@@ -33,7 +33,7 @@
 
                 <button type="button" id="filtrar" class="filtrar">Filtrar</button>
             </form>
-        </div> <!-- FILTRAR POR FECHA -->
+        </div>*/ } <!-- FILTRAR POR FECHA -->
         <button id="btnExportar" class="btnExportar">Exportar Excel</button>
     </div>
 <table class="table" id="tabla">
@@ -142,7 +142,6 @@
     </tbody>
 </table>
 
-<button id="btnExportar">Exportar Excel</button>
 </body>
 <footer>
     <p>Dirección de Informática - Departamento de Desarrollo y Mantenimiento de Sistemas</p>
