--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
     <header>
         <div class="navbar">
             <div class="navbar-logo">
-                <a asp-page="/Vistas/IndexLogueado"><img src="~/imagenes/3.png" alt="logogc" /></a>
-                <a class="a-to-index" asp-page="/Vistas/IndexLogueado">Pedidos de Trabajo - Cuartel General - Edificio Cóndor</a>
+                <a asp-page="/Vistas/IngresoPersonal"><img src="~/imagenes/3.png" alt="logogc" /></a>
+                <a class="a-to-index" asp-page="/Vistas/IngresoPersonal">Pedidos de Trabajo - Cuartel General - Edificio Cóndor</a>
             </div>
             <div class="centered-button">
                 @if (!pages.Contains(currentPage))
