--- a/PPTT/Pages/Administradores/Edit.cshtml
+++ b/PPTT/Pages/Administradores/Edit.cshtml
@@ -12,33 +12,27 @@
             <form method="post" class="form-mod">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Admin.ID_Usuario_Pk" />
-                <div class="form-group">
-                    <label asp-for="Admin.Nombre" class="control-label"></label>
-                    <input asp-for="Admin.Nombre" class="form-control" />
+                <div class="form-group">                    
+                    <input asp-for="Admin.Nombre" class="form-control" placeholder="Nombre"/>
                     <span asp-validation-for="Admin.Nombre" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Admin.Apellido" class="control-label"></label>
-                    <input asp-for="Admin.Apellido" class="form-control" />
+                <div class="form-group">                   
+                    <input asp-for="Admin.Apellido" class="form-control" placeholder="Apellido"/>
                     <span asp-validation-for="Admin.Apellido" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Admin.DNI" class="control-label"></label>
-                    <input asp-for="Admin.DNI" class="form-control" />
+                <div class="form-group">                    
+                    <input asp-for="Admin.DNI" class="form-control" placeholder="DNI" />
                     <span asp-validation-for="Admin.DNI" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Admin.Numero_Control" class="control-label"></label>
-                    <input asp-for="Admin.Numero_Control" class="form-control" />
+                <div class="form-group">                    
+                    <input asp-for="Admin.Numero_Control" class="form-control" placeholder="Número de Control"/>
                     <span asp-validation-for="Admin.Numero_Control" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Admin.Correo" class="control-label"></label>
-                    <input asp-for="Admin.Correo" class="form-control" />
+                <div class="form-group">                    
+                    <input asp-for="Admin.Correo" class="form-control" placeholder="Correo Electrónico"/>
                     <span asp-validation-for="Admin.Correo" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Admin.ID_Division_Fk" class="control-label"></label>
+                <div class="form-group">                    
                     <select asp-for="Admin.ID_Division_Fk"
                             asp-items="Model.Divisions.Select(d => new SelectListItem
                                     {
@@ -51,19 +45,17 @@
                     </select>
                     <span asp-validation-for="Admin.ID_Division_Fk" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Admin.ID_Servicio_Fk" id="servicioLabel" class="control-label"></label>
+                <div class="form-group">                    
                     <select asp-for="Admin.ID_Servicio_Fk" id="servicioSelect" class="form-control" required>
-                        <option hidden value="">Seleccione el servicio correspondiente</option>
+                        <option hidden value="">Seleccione el Servicio Correspondiente</option>
                     </select>
                     <span asp-validation-for="Admin.ID_Servicio_Fk" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Admin.ID_Rol_Fk" class="control-label"></label>
+                <div class="form-group">                    
                     <select asp-for="Admin.ID_Rol_Fk"
                             asp-items="Model.Roles"
                             class="form-control">
-                        <option hidden selected value="">Seleccione un rol</option>
+                        <option hidden selected value="">Seleccione un Rol</option>
                     </select>
                     <span asp-validation-for="Admin.ID_Rol_Fk" class="text-danger"></span>
                 </div>
