--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -3,7 +3,7 @@
 <body>
     <div class="header-index-pt">
         <a asp-page="./Finalizados" class="btn-header-pt">Trabajos Finalizados</a>
-        <div>
+        @{/*<div>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
             <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
             <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> <!-- Cargar idioma español -->
@@ -28,8 +28,8 @@
 
                 <button type="button" id="filtrar" class="filtrar">Filtrar</button>
             </form>
-        </div> <!-- FILTRAR POR FECHA -->            
-        <button id="btnExportar" class="btnExportar">Exportar Excel</button>
+    </div>*/}
+    <button id="btnExportar" class="btnExportar">Exportar Excel</button>
     </div>
 <table class="table" id="tabla">
     <thead>
