--- a/PPTT/Pages/Vistas/OlvideContraseña.cshtml
+++ b/PPTT/Pages/Vistas/OlvideContraseña.cshtml
@@ -2,6 +2,28 @@
 @model PPTT.Pages.Vistas.OlvideContraseñaModel
 @{
 }
+<body>
+    <form method="post" class="form-log">
+        <fieldset>
+            <legend>Recuperar Contraseña</legend>
+            <hr/>
+            <div class="box">
+                <span>Para recuperar su contraseña, ingrese su DNI y correo electrónico. Luego, revise su casilla de correo electrónico registrado, se le enviará una nueva contraseña que podra utilizar para acceder al sistema.</span>
+            </div>
+            <div>                
+                <input type="number" id="dni" name="dni" value="" placeholder="DNI" required />
+            </div>           
+            <div>                
+                <input type="text" id="Correo" name="Correo" value="" placeholder="Correo Electrónico" required />
+            </div>
+            <hr />
+            <div class="login-botton">                          
+                <input type="submit" value="Recuperar Contraseña" class="submit-log" />
+                <a asp-page="./IngresoPersonal">Volver</a>
+            </div>
+        </fieldset>
+    </form>  
+</body>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -16,7 +38,7 @@
         margin: 30px auto;
         padding: 25px;
         background-color: #ffffff;
-        border: 1px solid #c2d3e0;       
+        border: 1px solid #c2d3e0;
         box-shadow: 0px 4px 12px rgba(0, 61, 107, 0.1);
     }
 
@@ -114,39 +136,15 @@
         padding: 5px;
     }
 
-    .box {        
+    .box {
         width: 90%;
         background-color: #f8f8f5;
         border: 1px solid #c2d3e0;
         border-radius: 10px;
         box-shadow: 0px 4px 12px rgba(0, 61, 107, 0.1);
-        font-size: 0.8em;        
+        font-size: 0.8em;
         padding: 15px;
-        margin: 30px auto;        
+        margin: 30px auto;
     }
 </style>
-
-<body>
-    <form method="post" class="form-log">
-        <fieldset>
-            <legend>Recuperar Contraseña</legend>
-            <hr/>
-            <div class="box">
-                <span>Para recuperar su contraseña, ingrese su DNI y correo electrónico. Luego, revise su casilla de correo electrónico registrado, se le enviará una nueva contraseña que podra utilizar para acceder al sistema.</span>
-            </div>
-            <div>
-                <label for="dni">DNI:</label>
-                <input type="number" id="dni" name="dni" value="" required />
-            </div>           
-            <div>
-                <label for="Mail">Correo Electronico:</label>
-                <input type="text" id="Correo" name="Correo" value="" required />
-            </div>
-            <hr />
-            <div class="login-botton">                          
-                <input type="submit" value="Enviar" class="submit-log" />
-            </div>
-        </fieldset>
-    </form>  
-</body>
 
