--- a/PPTT/wwwroot/css/site.css
+++ b/PPTT/wwwroot/css/site.css
@@ -48,17 +48,17 @@ body {
 }
 .cerrarsesion {
     background-color: transparent;
-    color: #f1faee;
+    color: #e63a64;
     border: none;
     padding: 0;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-    outline: none;    
+    outline: none;
 }
 
     .cerrarsesion:hover {
-        color: #f1ffff;
+        color: #d13a64;
     }
 
 .card {
@@ -365,3 +365,8 @@ a.btn-header-pt {
     a.btn-header-pt:hover {
         background-color: #e16725;
     }
+
+.buscador {
+
+    width: 30vw;
+}
