--- a/PPTT/Pages/Administradores/IndexAdminU.cshtml
+++ b/PPTT/Pages/Administradores/IndexAdminU.cshtml
@@ -46,10 +46,12 @@
     <tbody>
         @{
             var divisionUsuario = HttpContext.Session.GetInt32("Division");
+            var divisionUsuario2 = HttpContext.Session.GetInt32("Division2");
         }
         @foreach (var item in Model.Admin)
         {
-            @if (item.ID_Division_Fk == divisionUsuario){
+            @if (item.ID_Division_Fk == divisionUsuario || item.ID_Division_Fk == divisionUsuario2)
+            {
             <tr>
                 <td>@item.Nombre</td>
                 <td>@item.Apellido</td>
